[package]
name = "ucc-WorldWideTree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["tokio", "macros"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
surrealdb = "1.4.0"
tokio = { version = "1.37.0", features = ["full"] }
